sonarlint compliance